Drone wall image

--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 <body>
 <h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<img src="http://tathanen.github.io/drone-wall.jpg" width="500">
+
 </body>
 </html>
